Update GroupActions, add storybook story

--- a/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/group-actions/group-actions.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/dashboard/group-actions/group-actions.component.html
@@ -5,7 +5,7 @@
       {{ group.name }}
       <button class="ui super tiny button">
         <i class="icon" [ngClass]="getButtonClass(group)"></i>
-        {{ group.isPaused ? 'Pause' : 'Resume' }}
+        {{ getGroupText(group) }}
       </button>
     </li>
   </ul>
