--- a/Source/Quartzmin.RestApi/ClientApp/src/app/jobs/job-list/job-list.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/jobs/job-list/job-list.component.html
@@ -23,51 +23,7 @@
 
   <div id="msg-panel"></div>
 
-  <table class="ui single line table highlight-rows" id="job-list">
-    <thead>
-    <tr>
-      <th>Name</th>
-      <th>Group</th>
-      <th>Class</th>
-      <th style="min-width: 160px">Next Fire Time</th>
-      <th>History</th>
-      <th>Flags</th>
-    </tr>
-    </thead>
-    <tbody>
-      <ng-container [ngSwitch]="data.state">
-        <ng-container *ngSwitchCase="'loading'">
-          <tr>
-            <td colspan="5">Loading...</td>
-          </tr>
-        </ng-container>
-        <ng-container *ngSwitchCase="'error'">
-          <tr>
-            <td colspan="5">Error: {{ data.error }}</td>
-          </tr>
-        </ng-container>
-        <ng-container *ngSwitchCase="'complete'">
-          <tr *ngFor="let job of data.data">
-            <td class="job-name">
-              <a [routerLink]="[job.group, job.name]" title="{{ job.description }}">{{ job.name }}</a>
-              <button class="ui icon mini detail button"><i class="dots icon"></i></button>
-            </td>
-            <td class="job-group">{{ job.group }}</td>
-            <td class="job-type">{{ job.type}}</td>
-            <td class="next-fire-time">{{ job.nextFireTime | appDate }}</td>
-            <td class="job-histogram">
-              <app-histogram></app-histogram>
-            </td>
-            <td>
-              <div *ngIf="job.persist" class="ui mini green label" title="Persist Job Data">P</div>
-              <div *ngIf="job.recovery" class="ui mini purple label" title="Request Recovery">R</div>
-              <div *ngIf="job.concurrent" class="ui mini orange label" title="Concurrent">C</div>
-            </td>
-          </tr>
-        </ng-container>
-      </ng-container>
-    </tbody>
-  </table>
+  <app-job-table [jobs]="jobs$ | async"></app-job-table>
 </ng-container>
 <ng-template #menu>
   <div>
