--- a/Source/Quartzmin.RestApi/ClientApp/src/app/executions/execution-list/execution-list.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/executions/execution-list/execution-list.component.html
@@ -3,41 +3,5 @@
 
   <div id="msg-panel"></div>
 
-  <table class="ui single line table highlight-rows">
-    <thead>
-      <tr>
-        <th>Job</th>
-        <th>Trigger</th>
-        <th>Scheduled Fire Time</th>
-        <th>Actual Fire Time</th>
-        <th>Run Time</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngIf="executions.loading">
-        <td colspan="6">Loading...</td>
-      </tr>
-      <tr *ngFor="let execution of executions.data">
-        <td>
-          <a [routerLink]="['/jobs', execution.job.group, execution.job.name, 'edit']">
-            {{ execution.job.group }}.{{ execution.job.name }}
-          </a>
-        </td>
-        <td>
-          <a [routerLink]="['/triggers', execution.trigger.group, execution.trigger.name, 'edit']">
-            {{ execution.trigger.group }}.{{ execution.trigger.name }}
-          </a>
-        </td>
-        <td>{{ execution.scheduledFireTime }}</td>
-        <td>{{ execution.actualFireTime }}</td>
-        <td>{{ execution.runTime }}</td>
-        <td class="interrupt">
-          <button class="ui super tiny red button btn-interrupt" (click)="interrupt(execution)">
-            <i class="stop icon"></i>Interrupt
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <app-execution-table [executions]="executions$ | async" (interrupt)="interrupt($event)"></app-execution-table>
 </ng-container>
