--- a/Source/Quartzmin.RestApi/ClientApp/src/app/notification/notification.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/notification/notification.component.html
@@ -1,5 +1,6 @@
 <div class="ui message" [ngClass]="cssClass">
   <i *ngIf="showCloseIcon" class="close icon"></i>
-  <div class="header">{{ header }}</div>
-  <p>{{ text }}</p>
+  <i *ngIf="type === 'info'" class="circle icon info"></i>
+  <div class="header" *ngIf="header != null">{{ header }}</div>
+  {{ text }}
 </div>
