Split trigger form into sub components

--- a/Source/Quartzmin.RestApi/ClientApp/src/app/triggers/trigger-form/trigger-form.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/triggers/trigger-form/trigger-form.component.html
@@ -134,189 +134,14 @@
         </div>
       </div>
 
-      <h3 class="ui dividing header" id="specificTriggerHeader">{{ form.get('type').value }}</h3>
+      <h3 class="ui dividing header" id="specificTriggerHeader">{{ form.get('type').value | titlecase }}</h3>
 
-      <div class="cron trigger-type" *ngIf="form.get('type').value === 'cron'" [formGroup]="selectedFormGroup">
-        <div class="fields">
-          <div class="seven wide field accept-error cron-field">
-            <label for="cron-expression">Cron Expression <a href="http://cronmaker.com" target="_blank">
-              <i class="external alternate icon"></i>http://cronmaker.com</a>
-            </label>
-            <input type="text" placeholder="Cron Expression" id="cron-expression" formControlName="cronExpression" />
-            <div style="float: right; cursor:pointer; display: none" id="next-cron-dates"><i class="eye icon"></i></div>
-            <p id="cron-desc"></p>
-          </div>
-          <div class="nine wide field accept-error">
-            <label for="triggerTimeZone">Time Zone</label>
-            <mat-select class="ui fluid search fulltext selection dropdown allow-empty" id="triggerTimeZone" formControlName="timezone">
-              <option value="">--- Not Set ---</option>
-            </mat-select>
-          </div>
-        </div>
-      </div>
-
-      <div class="simple trigger-type" *ngIf="form.get('type').value === 'simple'" [formGroup]="selectedFormGroup">
-        <div class="fields">
-          <div class="four wide field accept-error">
-            <label for="repeatInterval">Repeat Interval</label>
-            <input type="text" placeholder="Repeat Interval" id="repeatInterval" formControlName="repeatInterval" />
-          </div>
-          <div class="three wide field accept-error">
-            <label>Unit</label>
-            <mat-select formControlName="repeatUnit">
-
-            </mat-select>
-          </div>
-        </div>
-
-        <div class="fields">
-          <div class="four wide field accept-error">
-            <label for="triggerSimpleRepeatCount">Repeat Count</label>
-            <input type="text" placeholder="Repeat Count" id="triggerSimpleRepeatCount" formControlName="repeatCount" />
-          </div>
-        </div>
-
-        <div class="field">
-          <div class="ui checkbox">
-            <input id="triggerSimpleRepeatForever" type="checkbox" formControlName="repeatForever" />
-            <label for="triggerSimpleRepeatForever">Repeat Forever</label>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="calendar trigger-type" *ngIf="form.get('type').value === 'calendar'" [formGroup]="selectedFormGroup">
-        <div class="fields">
-          <div class="four wide field accept-error">
-            <label for="triggerCalendarRepeatInterval">Repeat Interval</label>
-            <input type="text" id="triggerCalendarRepeatInterval" placeholder="Repeat Interval" />
-          </div>
-          <div class="three wide field accept-error">
-            <label>Unit</label>
-          </div>
-          <div class="nine wide field accept-error">
-            <label for="triggerCalendarTimezone">Time Zone</label>
-            <select id="triggerCalendarTimezone" class="ui fluid search fulltext selection dropdown allow-empty">
-              <option value="">--- Not Set ---</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="field">
-          <div class="ui checkbox">
-            <input id="preserveHourAcrossDst" type="checkbox" formControlName="preserveHourAcrossDst" />
-            <label for="preserveHourAcrossDst">Preserve Hour of Day Across Daylight Savings</label>
-          </div>
-        </div>
-
-        <div class="field">
-          <div class="ui checkbox">
-            <input id="skipDayIfHourDoesNotExist" type="checkbox" formControlName="skipDayIfHourDoesNotExist" />
-            <label for="skipDayIfHourDoesNotExist">Skip Day If Hour Does Not Exist</label>
-          </div>
-        </div>
-      </div>
-
-      <div class="daily trigger-type" *ngIf="form.get('type').value === 'daily'" [formGroup]="selectedFormGroup">
-        <div class="fields">
-          <div class="four wide field accept-error">
-            <label for="triggerDailyRepeatInterval">Repeat Interval</label>
-            <input id="triggerDailyRepeatInterval" type="text" placeholder="Repeat Interval"  />
-          </div>
-          <div class="three wide field accept-error">
-            <label>Unit</label>
-          </div>
-          <div class="nine wide field accept-error">
-            <label for="triggerDailyTimezone">Time Zone</label>
-            <mat-select id="triggerDailyTimezone" class="ui fluid search fulltext selection dropdown allow-empty">
-              <mat-option [value]="null">--- Not Set ---</mat-option>
-            </mat-select>
-          </div>
-        </div>
-
-        <div class="fields">
-          <div class="four wide field accept-error">
-            <label for="triggerDailyRepeatCount">Repeat Count</label>
-            <input id="triggerDailyRepeatCount" type="text" placeholder="Repeat Count" formControlName="repeatCount" />
-          </div>
-        </div>
-
-        <div class="field">
-          <div class="ui checkbox">
-            <input id="triggerDailyRepeatForever" type="checkbox" formControlName="repeatForever">
-            <label for="triggerDailyRepeatForever">Repeat Forever</label>
-          </div>
-        </div>
-
-        <div class="fields">
-          <div class="four wide field accept-error">
-            <label for="triggerStartTime">Start Time of Day</label>
-            <div class="ui calendar time-only">
-              <div class="ui fluid input left icon">
-                <i class="clock alternate outline icon"></i>
-                <input id="triggerStartTime" type="text" autocomplete="off" placeholder="Time" formControlName="startTime">
-              </div>
-            </div>
-          </div>
-          <div class="four wide field accept-error">
-            <label for="triggerEndTime">End Time of Day</label>
-            <div class="ui calendar time-only">
-              <div class="ui fluid input left icon">
-                <i class="clock alternate outline icon"></i>
-                <input id="triggerEndTime" type="text" autocomplete="off" placeholder="Time" formControlName="endTime">
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="field" formArrayName="daysOfWeek">
-          <label>Days of Week</label>
-          <div class="inline fields">
-            <div class="field">
-              <div class="ui checkbox">
-                <input id="dowMonday" type="checkbox" formControlName="1" />
-                <label for="dowMonday">Monday</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui checkbox">
-                <input id="dowTuesday" type="checkbox" formControlName="2" />
-                <label for="dowTuesday">Tuesday</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui checkbox">
-                <input id="dowWednesday" type="checkbox" formControlName="3" />
-                <label for="dowWednesday">Wednesday</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui checkbox">
-                <input id="dowThursday" type="checkbox" formControlName="4" />
-                <label for="dowThursday">Thursday</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui checkbox">
-                <input id="dowFriday" type="checkbox" formControlName="5" />
-                <label for="dowFriday">Friday</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui checkbox">
-                <input id="dowSaturday" type="checkbox" formControlName="6" />
-                <label for="dowSaturday">Saturday</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui checkbox">
-                <input id="dowSunday" type="checkbox" formControlName="0" />
-                <label for="dowSunday">Sunday</label>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <ng-container [ngSwitch]="form.get('type').value">
+        <app-cron-trigger-form *ngSwitchCase="'cron'" [formGroup]="selectedFormGroup"></app-cron-trigger-form>
+        <app-simple-trigger-form *ngSwitchCase="'simple'" [formGroup]="selectedFormGroup"></app-simple-trigger-form>
+        <app-calendar-trigger-form *ngSwitchCase="'calendar'" [formGroup]="selectedFormGroup"></app-calendar-trigger-form>
+        <app-daily-trigger-form *ngSwitchCase="'daily'" [formGroup]="selectedFormGroup"></app-daily-trigger-form>
+      </ng-container>
     </div>
     <h3 class="ui dividing header">Job Data Map</h3>
 
