WIP: Calendar form component

--- a/Source/Quartzmin.RestApi/ClientApp/src/app/calendars/calendar-list/calendar-list.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/calendars/calendar-list/calendar-list.component.html
@@ -3,7 +3,7 @@
   <input type="text" placeholder="Search Calendar..." id="search-calendar">
   <i class="search icon"></i>
 </div>
-<a class="ui right floated primary button" [routerLink]="[]">
+<a class="ui right floated primary button" [routerLink]="[CrudRoutes.CREATE]">
   <i class="plus icon"></i>New
 </a>
 
