--- a/Source/Quartzmin.RestApi/ClientApp/src/app/jobs/job-table/job-table.component.html
+++ b/Source/Quartzmin.RestApi/ClientApp/src/app/jobs/job-table/job-table.component.html
@@ -27,7 +27,7 @@
       </tr>
       <tr *ngFor="let job of jobs.data">
         <td class="job-name">
-          <a [routerLink]="[job.group, job.name]" title="{{ job.description }}">{{ job.name }}</a>
+          <a [routerLink]="[(job.group + '/' + job.name) | appUrlEncode, 'edit']" title="{{ job.description }}">{{ job.name }}</a>
           <button class="ui icon mini detail button"><i class="dots icon"></i></button>
         </td>
         <td class="job-group">{{ job.group }}</td>
